--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
 </head>
 
 <body>
+
+  <!-- HEADER -->
   <header>
-    <h1 class="text-center">FizzBuzzDOM</h1>
+
+    <h1 class="text-center fw-bold border rounded-3 py-3">FizzBuzzDOM</h1>
+  
   </header>
 
-  
+  <!-- MAIN -->
+  <main>
 
-  <div class="container d-flex justify-content-center mx-auto">
-    
+    <div class="container d-flex justify-content-center mx-auto"> </div>
 
-  </div>
-  
+  </main>
 
   <!-- JS -->
   <script src="js/script.js"></script>
